--- a/exercise-servers/package.json
+++ b/exercise-servers/package.json
@@ -6,13 +6,15 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "start:server": "nodemon server.js"
+    "start:server": "nodemon express-server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.21.1",
+    "express": "^4.21.1"
+  },
+  "devDependencies": {
     "nodemon": "^3.1.7"
   }
 }
